// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initially matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="DurationInput-main"
    role="timer"
    tabindex="0"
  >
    <div
      class="DurationInput-area"
    >
      <span
        class="Digit lit"
      >
        1
      </span>
      <span
        class="Digit lit"
      >
        5
      </span>
      <span
        class="Label minutes lit"
      >
        m
      </span>
      <span
        class="Digit lit"
      >
        0
      </span>
      <span
        class="Digit lit"
      >
        0
      </span>
      <span
        class="Label seconds lit"
      >
        s
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when blurring matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="DurationInput-main"
    role="timer"
    tabindex="0"
  >
    <div
      class="DurationInput-area"
    >
      <span
        class="Digit lit"
      >
        1
      </span>
      <span
        class="Digit lit"
      >
        5
      </span>
      <span
        class="Label minutes lit"
      >
        m
      </span>
      <span
        class="Digit lit"
      >
        0
      </span>
      <span
        class="Digit lit"
      >
        0
      </span>
      <span
        class="Label seconds lit"
      >
        s
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when focusing matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="DurationInput-main"
    role="textbox"
    tabindex="0"
  >
    <div
      class="DurationInput-area editing"
    >
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Label hours"
      >
        h
      </span>
      <span
        class="Digit"
      >
        1
      </span>
      <span
        class="Digit"
      >
        5
      </span>
      <span
        class="Label minutes"
      >
        m
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Label seconds"
      >
        s
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when typing in a time matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="DurationInput-main"
    role="textbox"
    tabindex="0"
  >
    <div
      class="DurationInput-area editing"
    >
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Label hours"
      >
        h
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit lit"
      >
        4
      </span>
      <span
        class="Label minutes lit"
      >
        m
      </span>
      <span
        class="Digit lit"
      >
        5
      </span>
      <span
        class="Digit lit"
      >
        1
      </span>
      <span
        class="Label seconds lit"
      >
        s
      </span>
    </div>
  </div>
</DocumentFragment>
`;
